# career_research

./: README.md  pyproject.toml
articles/: Backend.md  Generative AI.md  Machine Learning.md  Management Consulting.md
knowledge/: user_preference.txt
src/job_trend_journalist/: crew.py  main.py
src/job_trend_journalist/config/: agents.yaml  tasks.yaml
