[project]
name = "job_trend_journalist"
version = "0.1.0"
description = "job-trend-journalist using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
job_trend_journalist = "job_trend_journalist.main:run"
run_crew = "job_trend_journalist.main:run"
train = "job_trend_journalist.main:train"
replay = "job_trend_journalist.main:replay"
test = "job_trend_journalist.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
